# willaireplaceyou

./: .gitignore  README.md  main.py  prompts.py  pyproject.toml  submission.md
backend/: .gitignore  Dockerfile  docker-compose.yml  main.py  prompts.py  pyproject.toml
data-flow/: package-lock.json
data-flow/src/components/: DataFlow.jsx  Nodes.jsx
frontend/: package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.jsx  page.jsx
frontend/app/components/: Footer.jsx  HeroSection.jsx  LightRays.jsx  Navbar.jsx  WhyItExists.jsx  lenisProvider.jsx
frontend/app/components/dashboard/: AlternativeCareers.jsx  DashboardLayout.jsx  FutureScenarios.jsx  JobOpportunities.jsx  MarketAnalytics.jsx  PersonalizedRoadmap.jsx  RiskAssessment.jsx  SkillsEngine.jsx  TasksBreakdown.jsx  data.json
frontend/app/dashboard/: page.jsx
frontend/app/dashboard/analytics/: page.jsx
frontend/app/dashboard/careers/: page.jsx
frontend/app/dashboard/market/: page.jsx
frontend/app/dashboard/roadmap/: page.jsx
frontend/app/dashboard/scenarios/: page.jsx
frontend/app/dashboard/skills/: page.jsx
frontend/app/dashboard/tasks/: page.jsx
frontend/app/hooks/: useProfessionData.js
frontend/lib/: useLenis.js
